// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomNumberInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item form-group-item-shrink"
      >
        <select
          class="form-control"
        >
          <option
            value="eq"
          >
            is equal to
          </option>
          <option
            value="gt"
          >
            greater than
          </option>
          <option
            value="lt"
          >
            less than
          </option>
          <option
            value="ne"
          >
            is not equal to
          </option>
          <option
            value="is-known"
          >
            is known
          </option>
          <option
            value="is-unknown"
          >
            is unknown
          </option>
        </select>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control"
          data-testid="number-input"
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomNumberInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Revenue
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <select
          class="form-control"
        >
          <option
            value="eq"
          >
            is equal to
          </option>
          <option
            value="gt"
          >
            greater than
          </option>
          <option
            value="lt"
          >
            less than
          </option>
          <option
            value="ne"
          >
            is not equal to
          </option>
          <option
            value="is-known"
          >
            is known
          </option>
          <option
            value="is-unknown"
          >
            is unknown
          </option>
        </select>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control"
          data-testid="number-input"
          type="number"
          value="123"
        />
      </div>
    </div>
  </div>
</div>
`;
